[gd_scene load_steps=10 format=3 uid="uid://dw54rje6cta3t"]

[ext_resource type="Script" uid="uid://clf0gup8kibd3" path="res://scripts/transition/transition_4cols_coordinator.gd" id="1_coordinator"]
[ext_resource type="Script" uid="uid://w0sij1s28g0j" path="res://scripts/transition/Columna1_logic.gd" id="2_logic"]
[ext_resource type="Script" uid="uid://cukjul10f7o81" path="res://scripts/transition/Columna1_UI.gd" id="3_ui"]
[ext_resource type="Script" uid="uid://c8fq4dyruonvd" path="res://scripts/transition/Columna3_UI.gd" id="4_33mf6"]
[ext_resource type="Script" uid="uid://y10isxtedbbo" path="res://scripts/transition/Columna2_logic.gd" id="4_logic2"]
[ext_resource type="Script" path="res://scripts/transition/Columna4_UI.gd" id="5_gm4uy"]
[ext_resource type="Script" uid="uid://c7fniugem5h2j" path="res://scripts/transition/Columna2_UI.gd" id="5_ui2"]
[ext_resource type="Script" uid="uid://d15yvurvhadrq" path="res://scripts/transition/Columna3_Logic.gd" id="7_uuf4p"]
[ext_resource type="Script" path="res://scripts/transition/Columna4_logic.gd" id="9_7se4s"]

[node name="Transition4ColsMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_coordinator")
metadata/_edit_use_anchors_ = true

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 300

[node name="Columna1_Container" type="VBoxContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Columna1_UI" type="VBoxContainer" parent="HSplitContainer/Columna1_Container"]
layout_mode = 2
script = ExtResource("3_ui")

[node name="HSplitContainer" type="HSplitContainer" parent="HSplitContainer"]
layout_mode = 2
split_offset = 400

[node name="Columna2_Container" type="VBoxContainer" parent="HSplitContainer/HSplitContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="Columna2_UI" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/Columna2_Container"]
layout_mode = 2
script = ExtResource("5_ui2")

[node name="PanelContainer_A" type="PanelContainer" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI"]
layout_mode = 2

[node name="LayoutContainer_A" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI/PanelContainer_A"]
layout_mode = 2

[node name="SubViewportContainer_A" type="SubViewportContainer" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI/PanelContainer_A/LayoutContainer_A"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch = true

[node name="SubViewport_A" type="SubViewport" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI/PanelContainer_A/LayoutContainer_A/SubViewportContainer_A"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(128, 128)
render_target_update_mode = 4

[node name="Camera3D_A" type="Camera3D" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI/PanelContainer_A/LayoutContainer_A/SubViewportContainer_A/SubViewport_A"]

[node name="DirectionalLight3D_A" type="DirectionalLight3D" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI/PanelContainer_A/LayoutContainer_A/SubViewportContainer_A/SubViewport_A"]

[node name="Model_A" type="Node3D" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI/PanelContainer_A/LayoutContainer_A/SubViewportContainer_A/SubViewport_A"]
unique_name_in_owner = true

[node name="PanelContainer_A_Controls" type="PanelContainer" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI/PanelContainer_A/LayoutContainer_A"]
layout_mode = 2

[node name="PanelContainer_B" type="PanelContainer" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI"]
layout_mode = 2

[node name="LayoutContainer_B" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI/PanelContainer_B"]
layout_mode = 2

[node name="SubViewportContainer_B" type="SubViewportContainer" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI/PanelContainer_B/LayoutContainer_B"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch = true

[node name="SubViewport_B" type="SubViewport" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI/PanelContainer_B/LayoutContainer_B/SubViewportContainer_B"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(128, 128)
render_target_update_mode = 4

[node name="Camera3D_B" type="Camera3D" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI/PanelContainer_B/LayoutContainer_B/SubViewportContainer_B/SubViewport_B"]

[node name="DirectionalLight3D_B" type="DirectionalLight3D" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI/PanelContainer_B/LayoutContainer_B/SubViewportContainer_B/SubViewport_B"]

[node name="Model_B" type="Node3D" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI/PanelContainer_B/LayoutContainer_B/SubViewportContainer_B/SubViewport_B"]
unique_name_in_owner = true

[node name="PanelContainer_B_Controls" type="PanelContainer" parent="HSplitContainer/HSplitContainer/Columna2_Container/Columna2_UI/PanelContainer_B/LayoutContainer_B"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="HSplitContainer/HSplitContainer"]
layout_mode = 2
split_offset = 250

[node name="Columna3_Container" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/HSplitContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Columna3_UI" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/HSplitContainer/Columna3_Container"]
layout_mode = 2
script = ExtResource("4_33mf6")

[node name="Columna4_Container" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/HSplitContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Columna4_UI" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/HSplitContainer/Columna4_Container"]
layout_mode = 2
script = ExtResource("5_gm4uy")

[node name="PanelContainer_PRE" type="PanelContainer" parent="HSplitContainer/HSplitContainer/HSplitContainer/Columna4_Container/Columna4_UI"]
layout_mode = 2

[node name="LayoutContainer_A" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/HSplitContainer/Columna4_Container/Columna4_UI/PanelContainer_PRE"]
layout_mode = 2

[node name="SubViewportContainer_PRE" type="SubViewportContainer" parent="HSplitContainer/HSplitContainer/HSplitContainer/Columna4_Container/Columna4_UI/PanelContainer_PRE/LayoutContainer_A"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch = true

[node name="SubViewport_PRE" type="SubViewport" parent="HSplitContainer/HSplitContainer/HSplitContainer/Columna4_Container/Columna4_UI/PanelContainer_PRE/LayoutContainer_A/SubViewportContainer_PRE"]
handle_input_locally = false
size = Vector2i(128, 128)
render_target_update_mode = 4

[node name="Camera3D_PRE" type="Camera3D" parent="HSplitContainer/HSplitContainer/HSplitContainer/Columna4_Container/Columna4_UI/PanelContainer_PRE/LayoutContainer_A/SubViewportContainer_PRE/SubViewport_PRE"]

[node name="DirectionalLight3D_PRE" type="DirectionalLight3D" parent="HSplitContainer/HSplitContainer/HSplitContainer/Columna4_Container/Columna4_UI/PanelContainer_PRE/LayoutContainer_A/SubViewportContainer_PRE/SubViewport_PRE"]

[node name="Model_PRE" type="Node3D" parent="HSplitContainer/HSplitContainer/HSplitContainer/Columna4_Container/Columna4_UI/PanelContainer_PRE/LayoutContainer_A/SubViewportContainer_PRE/SubViewport_PRE"]

[node name="PanelContainer_PRE_Controls" type="PanelContainer" parent="HSplitContainer/HSplitContainer/HSplitContainer/Columna4_Container/Columna4_UI/PanelContainer_PRE/LayoutContainer_A"]
layout_mode = 2

[node name="Columna1_Logic" type="Node" parent="."]
script = ExtResource("2_logic")

[node name="Columna2_Logic" type="Node" parent="."]
script = ExtResource("4_logic2")

[node name="Columna3_Logic" type="Node" parent="."]
script = ExtResource("7_uuf4p")

[node name="Columna4_Logic" type="Node" parent="."]
script = ExtResource("9_7se4s")
